--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</div>
 	<!---------Audio--------->
 	<div class="aud">
-		<audio src="../Pranay_Creativity.mp3" id="aud" loop="TRUE"></audio>
+		<audio src="Pranay_Creativity.mp3" id="aud" loop="TRUE"></audio>
 		<button id="butto" class="butto">
 			<i class="fa fa-volume-up " aria-hidden="true"></i>
 		</button>
