--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">  <!--ham -->
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">  <!--ham -->
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<title>Satyalekhan</title>
 	<link rel="stylesheet" href="./mainstyle.css">
 	<!-- CSS only -->
@@ -36,7 +35,7 @@
 	</div>
 	<!---------Audio--------->
 	<div class="aud">
-		<audio src="Pranay_Creativity.mp3" id="aud" loop="TRUE"></audio>
+		<audio src="../Pranay_Creativity.mp3" id="aud" loop="TRUE"></audio>
 		<button id="butto" class="butto">
 			<i class="fa fa-volume-up " aria-hidden="true"></i>
 		</button>
@@ -45,10 +44,14 @@
 	<canvas id="bgCanvas"></canvas>
 	<!-- partial -->
 	<div class="scroll-left">
-		<p>SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp </p>
+		<p>SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp </p>
 	</div>
 	<div id="but" class=" weswap-current">
 		<a href="Vichaar Ya Vishvaas/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Vichaar Ya Vishvaas</a>
+
+		<a href="Ek Arse Baad/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Ek Arse Baad</a>
+	
+		<a href="Mere Kuchh Savaal/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Mere Kuchh Savaal</a>
 
 		<a href="Tum Chahte Ho Kya/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Tum Chahte Ho Kya?</a>
 
@@ -60,9 +63,9 @@
 
 		<a href="Existence/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Existence</a> 
 
-		<a href="#" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">If only I knew</a>
+		<!--<a href="#" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">If only I knew</a>
 		
-		<a href="#" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Please Tell Me Too</a>
+		<a href="#" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Please Tell Me Too</a>-->
 	</div>
 
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
