--- a/Ek Arse Baad/index.html
+++ b/Ek Arse Baad/index.html
@@ -188,7 +188,7 @@
       <button class="map-point-sm hi button" id="hi" data-show=".hindi">
         <div class="content">
           <div>
-            <p  class="hd">Hindi</p>
+            <p  class="hd">हिंदी</p>
           </div>
         </div>
       </button>
