--- a/Agar Main Ishwar Hota/index.html
+++ b/Agar Main Ishwar Hota/index.html
@@ -299,7 +299,7 @@ html {
       <button class="map-point-sm hi button" id="hi" data-show=".hindi">
         <div class="content">
           <div>
-            <p  class="hd">Hindi</p>
+            <p  class="hd">हिंदी</p>
           </div>
         </div>
       </button>
