--- a/Tum Chahte Ho Kya/index.html
+++ b/Tum Chahte Ho Kya/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
   <html lang="en" >
   <head>
     <meta charset="UTF-8">
@@ -120,7 +120,7 @@
           <button class="map-point-sm hi button" id="hi" data-show=".hindi">
             <div class="content">
               <div>
-                <p  class="hd">Hindi</p>
+                <p  class="hd">हिंदी</p>
               </div>
             </div>
           </button>
