--- a/Vichaar Ya Vishvaas/index.html
+++ b/Vichaar Ya Vishvaas/index.html
@@ -59,7 +59,7 @@
       <button class="map-point-sm hi button" id="hi" data-show=".hindi">
         <div class="content">
           <div>
-            <p  class="hd">Hindi</p>
+            <p  class="hd">हिंदी</p>
           </div>
         </div>
       </button>
