--- a/Existence/index.html
+++ b/Existence/index.html
@@ -189,10 +189,10 @@ the front door to<br>
 
   </p>
 
- <p style="text-align:right; padding-right:  8%;">
+<!-- <p style="text-align:right; padding-right:  8%;">
   - Pranay Patel<br>
-</p>
-
+ </p>
+-->
 
 </div>
 
