--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 	<div id="but" class=" weswap-current">
 		<a href="Vichaar Ya Vishvaas/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Vichaar Ya Vishvaas</a>
 
+		<a href="The Final Solution/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">The Final Solution?</a>
+
 		<a href="Ek Arse Baad/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Ek Arse Baad</a>
 	
 		<a href="Mere Kuchh Savaal/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Mere Kuchh Savaal</a>
