--- a/The Final Solution/index.html
+++ b/The Final Solution/index.html
@@ -241,6 +241,7 @@ Bank credit creation and allocation make and own the Corporates and aggressively
   </p>
  <p style="text-align:right; padding-right:  8%;">
   - Vikash Diwan<br>
+    <a href="https://t.me/TruthUncensored" style="text-decoration: none;color: #ff0">t.me/TruthUncensored</a>
 </p>
 
 
