--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 	<div id="but" class=" weswap-current">
 		<a href="Vichaar Ya Vishvaas/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Vichaar Ya Vishvaas</a>
 
+		<a href="My Name is/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">My Name is</a>
+
 		<a href="Khud Ki Talash/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Khud Ki Talash</a>
 
 		<a href="The Final Solution/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">The Final Solution?</a>
