--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 	<div id="but" class=" weswap-current">
 		<a href="Vichaar Ya Vishvaas/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Vichaar Ya Vishvaas</a>
 
+		<a href="Spiritual Crisis/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Spiritual Crisis</a>
+
 		<a href="My Name is/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">My Name is</a>
 
 		<a href="Khud Ki Talash/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Khud Ki Talash</a>
@@ -59,7 +61,8 @@
 	
 		<a href="Mere Kuchh Savaal/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Mere Kuchh Savaal</a>
 
-		<a href="Tum Chahte Ho Kya/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Tum Chahte Ho Kya?</a>
+		<a href="Tum Chahte Ho Kya/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Tum Chahte Ho Kya?</a> 
+
 
 		<a href="The Elephant Rope/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">The Elephant Rope</a> 
 
