--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 	</div>
 	<div id="but" class=" weswap-current">
 		<a href="Vichaar Ya Vishvaas/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Vichaar Ya Vishvaas</a>
+		
+		<a href="Mai Panchi Sonay K Pinjray Ka/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">में पंछी सोने के पिंझरे का</a> 
 
 		<a href="Spiritual Crisis/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Spiritual Crisis</a>
 
