--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 		<p>SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp SATYALEKHAN &nbsp &nbsp &nbsp सत्यलेखन &nbsp &nbsp &nbsp </p>
 	</div>
 	<div id="but" class=" weswap-current">
+
+		<a href="Pahalee Najar Kee Mohabbat/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">पहली नजर की मोहब्बत</a> 
 		<a href="Vichaar Ya Vishvaas/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">Vichaar Ya Vishvaas</a>
 		
 		<a href="Mai Panchi Sonay K Pinjray Ka/index.html" class="button col-xs-5 col-sm-6 col-md-4 col-xs-6 col-lg-2">में पंछी सोने के पिंझरे का</a> 
